--- a/style.css
+++ b/style.css
@@ -10,18 +10,18 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  
   transition: background 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-  
 }
 
-.phone{
-  background-image: url("icons_claire.paoletti");
-}
+
+
 
 nav {
-  width: 440px;
+  width: 100%;
+  
+
 }
+
 
 .wave-wrap {
   position: relative;
@@ -106,8 +106,8 @@ nav {
 }
 
 .phone {
-  width: 440px;
-  height: 667px;
+  width: 90%;
+  height: 90%;
   border: 7px solid rgba(0, 0, 0, 0.05);
   border-radius: 20px;
   overflow: hidden;
@@ -115,24 +115,31 @@ nav {
   align-items: flex-end;
   flex-direction: column;
   font-family: "arial";
+  max-width: 440px;
+  box-shadow:
+  0 10.9px 8.4px -12px rgba(0, 0, 0, 0.023),
+  0 21.2px 29.7px -12px rgba(0, 0, 0, 0.042),
+  0 30.5px 63.1px -12px rgba(0, 0, 0, 0.059),
+  0 38.4px 105.8px -12px rgba(0, 0, 0, 0.072),
+  0 44.5px 153.9px -12px rgba(0, 0, 0, 0.081),
+  0 49px 202.8px -12px rgba(0, 0, 0, 0.087),
+  0 53px 249px -12px rgba(0, 0, 0, 0.09)
+;
+ background-color: #F7F2F6;
 }
 .phone .mainContent {
   padding-left: 15px;
-  height: 554px;
-  width: 100%;
   
-  justify-content: cente;
-  align-items: cente;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
   position: relative;
   color: rgba(0, 0, 0, 0.1);
- 
   letter-spacing: pt;
   padding-top: 15px;
 }
 
-.mainContent h3{
-  padding-top: 20px;
-}
+
 
 .centerContent{
   padding-top: 10px;
@@ -142,7 +149,7 @@ nav {
  
   width: 100%;
   float: left;
-  padding-bottom: 20px;
+  
 }
 
 .centerContent p{
@@ -234,9 +241,38 @@ color: #473f5e;
   bottom: 0;
   color: #2f3542;
 }
-.phone .footer .bold{
-  
-  font-size: 30px;
-  font-weight: bold;
-  
+@media (min-height: 650px) {
+  .footer .bold {
+    font-size: 30px;
+    font-weight: bold;
+  }
 }
+
+@media (max-height: 650px) {
+  .footer .bold {
+    font-size: 15px;
+    font-weight: bold;
+  }
+}
+
+@media (max-height: 570px) {
+h3 {
+    padding-top : 0px ;
+    padding-bottom: 0px;
+
+  }
+}
+@media (max-height: 570px) {
+  .mainContent {
+    height: 420px;
+
+  }
+}
+@media (min-height: 570px) {
+  .mainContent {
+    height: 500px;
+
+  }
+}
+
+
