--- a/style.css
+++ b/style.css
@@ -259,9 +259,18 @@ color: #3f3823fd;
 h3 {
     padding-top : 0px ;
     padding-bottom: 0px;
+    font-size: 16px;
 
   }
 }
+
+@media (max-height: 570px) {
+  h4 {
+     
+      font-size: 14px;
+  
+    }
+  }
 
 @media (max-height: 575px) {
   h2 {
