--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav {
   background: #2f3542;
   list-style: none;
   justify-content: space-around;
-  padding: 0 20px;
+  padding: 0 15px;
 }
 .list-wrap li {
   cursor: pointer;
@@ -80,6 +80,15 @@ nav {
   transform: scale(0);
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
+@media (max-height:570px) {
+  .list-wrap li{
+     
+     
+      height: 50px;
+    }
+  }
+
 .list-wrap li.active {
   margin-top: -10px;
 }
