ajout lien linkedin

--- a/style.css
+++ b/style.css
@@ -60,6 +60,14 @@ nav {
   align-items: center;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
+.iconRS{
+  list-style-type: none;
+  margin:0;
+}
+.iconRS li{
+  display: table-cell;
+  
+}
 .list-wrap li i {
   position: relative;
   font-size: 1.5em;
