svg icon rs add

--- a/style.css
+++ b/style.css
@@ -13,6 +13,56 @@ body {
   transition: background 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
+.iconRS ul li a{
+  display: inline-block;
+  font-size: 25px;
+  margin-right: 10px;
+ 
+}
+.iconRS ul li a #insta:hover{
+  color: rgb(147, 31, 201);
+  transition: 0.4s;
+}
+.iconRS ul li a #linkedin:hover{
+  color: #626ed6;
+  transition: 0.4s;
+}
+.iconRS ul li a #dribbble:hover{
+  color: #ff4fb0;
+  transition: 0.4s;
+}
+.iconRS ul li a #behance:hover{
+  color: #2042ff;
+  transition: 0.4s;
+}
+.iconRS ul li a #git:hover{
+  color: #2f3542;
+  transition: 0.4s;
+}
+
+.iconRS ul li a{
+  text-decoration: none;
+
+}
+
+
+
+.iconRS ul li a:after {
+  content: "";
+  display: block;
+  height: 0.25em;
+  width: 0%;
+  margin-bottom: 9px;
+  background-color: rgb(97, 97, 97);
+  transition: width 0.4s;
+  
+ }
+ 
+ .iconRS ul li:hover:after {
+  width: 100%;
+ }
+
+
 
 
 
